integration_tests/juniper_tests/fail/object/impl_no_argument_underscore.rs
struct Object {}

#[juniper::graphql_object]
impl Object {
    fn test(&self, __test: String) -> String {
        String::new()
    }
}

fn main() {}
